--- a/styles.css
+++ b/styles.css
@@ -38,32 +38,47 @@ section {
     text-align: center;
 }
 
-h1, h2 , h3{
+h1,
+h2,
+h3 {
     color: #333;
 }
 
 .Individual-Skills {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
     margin-top: 20px;
 }
 
 .image-container {
-    display: flex; /* Flexbox layout for side-by-side display */
-    justify-content: space-between; /* Space between images */
-    gap: 20px; /* Gap between image items */
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    min-height: 80vh;
+}
+
+.image-sub-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    gap: 1rem;
 }
 
 .image-item {
-    text-align: center; /* Center text under each image */
-    flex: 1; /* Make each item flexible to share available space */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    flex: 1;
 }
 
 .image-item img {
-    width: 100%; /* Make images responsive */
-    height: auto; /* Maintain aspect ratio */
-    display: block; /* Remove bottom spacing caused by inline-block */
+    max-height: 15rem;
+    width: 100%;
+    object-fit: contain;
 }
 
 .skills {
@@ -78,7 +93,8 @@ form {
     margin: 0 auto;
 }
 
-form input, form textarea {
+form input,
+form textarea {
     width: 100%;
     padding: 10px;
     margin: 5px 0;
